Правки к пул реквесту 2